Updated dependencies. Removed QW-BP16. Fixed some bugs

--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.4.9",
+  "version": "0.4.10",
   "description": "QualWeb best practices",
   "main": "dist/bp.js",
   "types": "./node_modules/@qualweb/types",
@@ -20,7 +20,6 @@
     "test:bp12": "mocha --require esm test/best-practices/QW-BP12.spec.js",
     "test:bp13": "mocha --require esm test/best-practices/QW-BP13.spec.js",
     "test:bp15": "mocha --require esm test/best-practices/QW-BP15.spec.js",
-    "test:bp16": "mocha --require esm test/best-practices/QW-BP16.spec.js",
     "test:bp17": "mocha --require esm test/best-practices/QW-BP17.spec.js",
     "test:bp18": "mocha --require esm test/best-practices/QW-BP18.spec.js",
     "clean": "node clean.js",
@@ -46,28 +45,24 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.31",
+    "@qualweb/dom": "^0.1.26",
+    "@qualweb/types": "^0.4.40",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.6.2",
-    "@types/puppeteer": "^3.0.1",
+    "@types/node": "^14.11.8",
+    "@types/puppeteer": "^3.0.2",
     "chai": "^4.2.0",
-    "css": "^3.0.0",
-    "css-select": "^2.1.0",
     "esm": "^3.2.25",
     "mocha": "^8.1.3",
-    "node-fetch": "^2.6.0",
-    "playwright": "^1.3.0",
-    "stew-select": "0.0.5",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "puppeteer": "^5.3.1",
+    "typescript": "^4.0.3",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.18",
-    "@qualweb/qw-page": "^0.1.21",
-    "@qualweb/util": "^0.3.32",
-    "htmlparser2": "^4.1.0",
+    "@qualweb/qw-element": "^0.1.24",
+    "@qualweb/qw-page": "^0.1.26",
+    "@qualweb/util": "^0.3.47",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.intersection": "^4.4.0"
