--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -26,8 +26,8 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "typeRoots": ["../node_modules/@qualweb/types"],                       /* List of folders to include type definitions from. */
-    "types": ["./node_modules/@qualweb/types", "node", "puppeteer"],                           /* Type declaration files to be included in compilation. */
+    "typeRoots": ["@qualweb/types"],                       /* List of folders to include type definitions from. */
+    "types": ["@qualweb/types", "node", "puppeteer"],                           /* Type declaration files to be included in compilation. */
     "esModuleInterop": true                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   }
 }
