--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.1.48",
+  "version": "0.1.49",
   "description": "Evaluates choosen modules",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -46,6 +46,7 @@
     "@qualweb/css-techniques": "^0.4.10",
     "@qualweb/html-techniques": "^0.4.11",
     "@qualweb/qw-page": "^0.1.26",
+    "@qualweb/wappalyzer": "^0.2.0",
     "node-fetch": "^2.6.1"
   }
 }
