--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.4.32",
+  "version": "0.4.33",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./dist",
@@ -13,6 +13,7 @@
     "test:file": "mocha --require esm test/file.spec.js",
     "test:urls": "mocha --require esm test/urls.spec.js",
     "test:parallel": "mocha --require esm test/parallel.spec.js",
+    "test:validator": "mocha --require esm test/validator.spec.js",
     "test:wp": "mocha --require esm test/wappalyzer.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
@@ -51,7 +52,7 @@
   "license": "ISC",
   "dependencies": {
     "@qualweb/crawler": "^0.1.1",
-    "@qualweb/dom": "^0.1.26",
+    "@qualweb/dom": "^0.1.27",
     "@qualweb/earl-reporter": "^0.2.7",
     "@qualweb/evaluation": "^0.1.49",
     "lodash.clone": "^4.5.0",
@@ -59,13 +60,13 @@
     "puppeteer": "^5.3.1"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.4.40",
+    "@qualweb/types": "^0.4.42",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^14.11.8",
+    "@types/node": "^14.14.0",
     "@types/puppeteer": "^3.0.1",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
-    "mocha": "^8.1.3",
+    "mocha": "^8.2.0",
     "node-fetch": "^2.6.1",
     "typescript": "^4.0.3"
   }
