--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "description": "Implementation of the WCAG 2.1 techniques",
-  "main": "dist/index.js",
+  "main": "dist/wcag.js",
   "scripts": {
     "tsc": "tsc",
     "lint": "eslint src/**/*",
@@ -33,16 +33,16 @@
   "homepage": "https://github.com/qualweb/wcag-techniques#readme",
   "dependencies": {
     "@qualweb/qw-element": "^0.1.25",
-    "@qualweb/qw-page": "^0.1.27",
-    "@qualweb/util": "^0.3.48",
+    "@qualweb/qw-page": "^0.1.29",
+    "@qualweb/util": "^0.3.50",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.intersection": "^4.4.0",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
-    "@qualweb/dom": "^0.1.26",
-    "@qualweb/types": "^0.4.39",
+    "@qualweb/dom": "^0.1.27",
+    "@qualweb/types": "^0.4.44",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.intersection": "^4.4.6",
