--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.1.51",
-  "description": "Evaluates choosen modules",
+  "version": "0.1.52",
+  "description": "Evaluates chosen modules",
   "main": "dist/index.js",
-  "types": "./node_modules/@qualweb/types",
+  "types": "./dist",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm",
@@ -30,21 +30,25 @@
   "devDependencies": {
     "@qualweb/dom": "^0.1.27",
     "@qualweb/types": "^0.4.44",
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/lodash.clone": "^4.5.6",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/node-fetch": "^2.5.7",
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "css-select": "^3.1.0",
     "esm": "^3.2.25",
-    "htmlparser2": "^5.0.0",
-    "mocha": "^8.1.3",
-    "puppeteer": "^5.2.1",
-    "typescript": "^4.0.3"
+    "htmlparser2": "^5.0.1",
+    "mocha": "^8.2.1",
+    "puppeteer": "^5.4.1",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@qualweb/act-rules": "^0.4.33",
     "@qualweb/best-practices": "^0.4.11",
-    "@qualweb/wcag-techniques": "^0.1.6",
     "@qualweb/qw-page": "^0.1.29",
+    "@qualweb/wappalyzer": "^0.2.0",
+    "@qualweb/wcag-techniques": "^0.1.6",
     "node-fetch": "^2.6.1"
   }
 }
