--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.4.33",
+  "version": "0.4.34",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/act.js",
-  "types": "./node_modules/@qualweb/types",
+  "types": "./dist",
   "scripts": {
     "tsc": "tsc",
     "test:all": "npm install && mocha --require esm test/act-rules.spec.js",
@@ -91,17 +91,21 @@
   "devDependencies": {
     "@qualweb/dom": "^0.1.24",
     "@qualweb/types": "^0.4.39",
+    "@tsconfig/recommended": "^1.0.1",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^14.0.27",
+    "@types/lodash.clone": "^4.5.6",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/node": "^14.14.7",
+    "@types/string-pixel-width": "^1.7.1",
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "esm": "^3.2.25",
-    "mocha": "^8.0.1",
-    "node-fetch": "^2.6.0",
-    "playwright": "^1.2.1",
+    "mocha": "^8.2.1",
+    "node-fetch": "^2.6.1",
+    "playwright": "^1.5.2",
     "puppeteer": "^5.2.1",
     "typescript": "^3.9.7",
-    "webpack": "^4.44.0",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
