--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.4.11",
+  "version": "0.4.12",
   "description": "QualWeb best practices",
   "main": "dist/bp.js",
-  "types": "./node_modules/@qualweb/types",
+  "types": "./dist",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm test/**/*",
@@ -45,24 +45,24 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/dom": "^0.1.26",
-    "@qualweb/types": "^0.4.40",
+    "@qualweb/dom": "^0.1.27",
+    "@qualweb/types": "^0.4.46",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.11.8",
-    "@types/puppeteer": "^3.0.2",
+    "@types/node": "^14.14.7",
+    "@types/puppeteer": "^3.0.5",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
-    "mocha": "^8.1.3",
-    "puppeteer": "^5.3.1",
-    "typescript": "^4.0.3",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "mocha": "^8.2.1",
+    "puppeteer": "^5.4.1",
+    "typescript": "^4.0.5",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.24",
-    "@qualweb/qw-page": "^0.1.26",
-    "@qualweb/util": "^0.3.47",
+    "@qualweb/qw-element": "^0.1.25",
+    "@qualweb/qw-page": "^0.1.29",
+    "@qualweb/util": "^0.3.54",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.intersection": "^4.4.0"
