--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-page",
-  "version": "0.1.29",
+  "version": "0.1.30",
   "description": "Utilities module for qualweb",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -32,12 +32,12 @@
     "chai": "^4.2.0",
     "esm": "^3.2.25",
     "mocha": "^8.0.1",
-    "playwright": "^1.2.1",
+    "puppeteer": "^5.2.1",
     "typescript": "^3.9.7",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.25"
+    "@qualweb/qw-element": "^0.1.27"
   }
 }
