--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -70,6 +70,7 @@
     "test:r60": "mocha --require esm test/rules/QW-ACT-R60.spec.js",
     "test:r61": "mocha --require esm test/rules/QW-ACT-R61.spec.js",
     "test:r62": "mocha --require esm test/rules/QW-ACT-R62.spec.js",
+    "test:r65": "mocha --require esm test/rules/QW-ACT-R65.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
