--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -74,6 +74,7 @@
     "test:r66": "mocha --require esm test/rules/QW-ACT-R66.spec.js",
     "test:r67": "mocha --require esm test/rules/QW-ACT-R67.spec.js",
     "test:r68": "mocha --require esm test/rules/QW-ACT-R68.spec.js",
+    "test:r69": "mocha --require esm test/rules/QW-ACT-R69.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
