--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -77,7 +77,7 @@
     "test:r69": "mocha --require esm test/rules/QW-ACT-R69.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
-    "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
+    "build": "npm run compile:rules && npm run clean && tsc --build && webpack",
     "pub": "npm run build && npm publish"
   },
   "keywords": [
@@ -106,12 +106,13 @@
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "esm": "^3.2.25",
+    "json-minimizer-webpack-plugin": "^2.0.0",
     "mocha": "^8.2.1",
     "node-fetch": "^2.6.1",
     "playwright": "^1.5.2",
     "puppeteer": "^5.2.1",
     "typescript": "^3.9.7",
-    "webpack": "^4.44.2",
+    "webpack": "^5.11.1",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
