Updated dependencies and web+ack config

--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.4.12",
+  "version": "0.4.13",
   "description": "QualWeb best practices",
   "main": "dist/bp.js",
   "types": "./dist",
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --require esm test/**/*",
     "test:bp1": "mocha --require esm test/best-practices/QW-BP1.spec.js",
     "test:bp2": "mocha --require esm test/best-practices/QW-BP2.spec.js",
     "test:bp4": "mocha --require esm test/best-practices/QW-BP4.spec.js",
@@ -22,9 +21,12 @@
     "test:bp15": "mocha --require esm test/best-practices/QW-BP15.spec.js",
     "test:bp17": "mocha --require esm test/best-practices/QW-BP17.spec.js",
     "test:bp18": "mocha --require esm test/best-practices/QW-BP18.spec.js",
-    "clean": "node clean.js",
+    "prebuild": "rimraf dist",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "compile:bps": "node compile-bps.js",
-    "build": "npm run compile:bps && npm run clean && tsc --build && webpack --mode development",
+    "build": "npm run compile:bps && npm run prebuild && tsc --build && webpack --mode production",
     "pub": "npm run build && npm publish --access=public"
   },
   "repository": {
@@ -45,24 +47,34 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/dom": "^0.1.27",
-    "@qualweb/types": "^0.4.46",
+    "@qualweb/dom": "^0.1.28",
+    "@qualweb/types": "^0.4.52",
+    "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.14.7",
-    "@types/puppeteer": "^3.0.5",
+    "@types/lodash.intersection": "^4.4.6",
+    "@types/node": "^14.14.20",
+    "@types/puppeteer": "^5.4.2",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "chai": "^4.2.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
-    "puppeteer": "^5.4.1",
-    "typescript": "^4.0.5",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "prettier": "^2.2.1",
+    "puppeteer": "^5.5.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.3",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.25",
-    "@qualweb/qw-page": "^0.1.29",
-    "@qualweb/util": "^0.3.54",
+    "@qualweb/qw-element": "^0.1.28",
+    "@qualweb/qw-page": "^0.1.34",
+    "@qualweb/util": "^0.3.61",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.intersection": "^4.4.0"
