--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Implementation of the WCAG 2.1 techniques",
   "main": "dist/wcag.js",
   "types": "./dist",
@@ -33,13 +33,10 @@
   },
   "homepage": "https://github.com/qualweb/wcag-techniques#readme",
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.29",
-    "@qualweb/qw-page": "^0.1.35",
     "@qualweb/util": "^0.3.61",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.intersection": "^4.4.0",
-    "node-fetch": "^2.6.0"
+    "lodash.intersection": "^4.4.0"
   },
   "devDependencies": {
     "@qualweb/dom": "^0.1.28",
@@ -47,14 +44,14 @@
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.intersection": "^4.4.6",
-    "@types/node": "^14.14.20",
+    "@types/node": "^14.14.22",
     "chai": "^4.2.0",
-    "css-select": "^2.1.0",
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
     "puppeteer": "^5.5.0",
+    "rimraf": "^3.0.2",
     "typescript": "^4.1.3",
-    "webpack": "^5.12.3",
-    "webpack-cli": "^4.3.1"
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0"
   }
 }
