--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.4.54",
+  "version": "0.4.55",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/act.js",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm test/rule.spec.js",
+    "test:url": "mocha --require esm test/url.spec.js",
     "test:pre": "mocha --require esm test/rulePreProcessing.spec.js",
     "compile:rules": "node compile-rules.js",
     "prebuild": "npm run compile:rules && rimraf prebuild && tsc --build",
@@ -28,12 +29,13 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "^0.1.34",
+    "@qualweb/qw-element": "^0.1.33",
     "@qualweb/qw-page": "^0.1.38",
-    "@qualweb/types": "^0.4.59",
+    "@qualweb/types": "^0.4.61",
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.14.32",
+    "@types/node": "^14.14.33",
     "@types/string-pixel-width": "^1.7.1",
     "chai": "^4.3.3",
     "css-select": "^3.1.2",
@@ -47,7 +49,7 @@
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
-    "@qualweb/util": "^0.3.65",
+    "@qualweb/util": "^0.3.66",
     "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
