--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "Implementation of the WCAG 2.1 techniques",
   "main": "dist/wcag.js",
   "scripts": {
@@ -32,16 +32,17 @@
   },
   "homepage": "https://github.com/qualweb/wcag-techniques#readme",
   "dependencies": {
-    "@qualweb/util": "^0.3.65",
+    "@qualweb/util": "^0.3.66",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
     "@qualweb/dom": "^0.1.34",
-    "@qualweb/types": "^0.4.59",
+    "@qualweb/qw-page": "^0.1.38",
+    "@qualweb/types": "^0.4.61",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.14.32",
+    "@types/node": "^14.14.33",
     "chai": "^4.3.3",
     "esm": "^3.2.25",
     "mocha": "^8.3.1",
