--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.4.17",
+  "version": "0.4.18",
   "description": "QualWeb best practices",
   "main": "dist/bp.js",
   "types": "./dist",
@@ -48,12 +48,12 @@
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
     "@qualweb/dom": "^0.1.34",
-    "@qualweb/types": "^0.4.59",
+    "@qualweb/types": "^0.4.61",
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.intersection": "^4.4.6",
-    "@types/node": "^14.14.32",
+    "@types/node": "^14.14.33",
     "@types/puppeteer": "^5.4.2",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
@@ -72,7 +72,8 @@
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "@qualweb/util": "^0.3.65",
+    "@qualweb/qw-page": "^0.1.38",
+    "@qualweb/util": "^0.3.66",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.intersection": "^4.4.0"
