--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.4.62",
+  "version": "0.4.63",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./dist",
@@ -20,7 +20,8 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "build": "npm run format && npm run lint && npm run prebuild && tsc --build",
-    "pub": "npm run build && npm publish"
+    "pub": "npm run build && npm publish",
+    "docs": "typedoc --out docs src/index.ts"
   },
   "keywords": [
     "qualweb",
@@ -57,15 +58,15 @@
     "@qualweb/crawler": "^0.1.1",
     "@qualweb/dom": "^0.1.34",
     "@qualweb/earl-reporter": "^0.3.0",
-    "@qualweb/evaluation": "^0.1.75",
+    "@qualweb/evaluation": "^0.1.76",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "puppeteer": "^8.0.0"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.4.60",
+    "@qualweb/types": "^0.4.61",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^14.14.22",
+    "@types/node": "^14.14.33",
     "@types/puppeteer": "^5.4.2",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -79,6 +80,7 @@
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "typedoc": "^0.20.30",
     "typescript": "^4.1.3"
   }
 }
