--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.1.34",
+  "version": "0.1.35",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./dist",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
-    "clean": "node clean.js",
-    "build": "npm run clean && tsc --build",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "prebuild": "rimraf dist",
+    "build": "npm run format && npm run lint && npm run prebuild && tsc --build",
     "pub": "npm run build && npm publish --access=public"
   },
   "repository": {
@@ -28,22 +31,31 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.47",
+    "@qualweb/types": "^0.4.62",
     "@tsconfig/recommended": "^1.0.1",
     "@types/domhandler": "^2.4.1",
     "@types/lodash.clone": "^4.5.6",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.33",
     "@types/node-fetch": "^2.5.7",
-    "chai": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "chai": "^4.3.3",
     "css": "^3.0.0",
     "css-select": "^3.1.0",
-    "mocha": "^8.2.1",
-    "typescript": "^4.0.5"
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-sonarjs": "^0.6.0",
+    "mocha": "^8.3.1",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "typedoc": "^0.20.30",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "domutils": "^2.4.2",
+    "domhandler": "^4.0.0",
     "htmlparser-to-html": "0.0.6",
-    "htmlparser2": "^6.0.0",
+    "htmlparser2": "^6.0.1",
     "lodash.clone": "^4.5.0",
     "node-fetch": "^2.6.1"
   }
