--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@qualweb/core",
-  "version": "0.4.65",
+  "version": "0.4.67",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
-  "types": "./dist",
+  "files": [
+    "./dist/*"
+  ],
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm",
@@ -20,8 +22,8 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "build": "npm run format && npm run lint && npm run prebuild && tsc --build",
-    "pub": "npm run build && npm publish",
-    "docs": "typedoc --out docs src/index.ts"
+    "docs": "typedoc --out docs src/index.ts",
+    "prepare": "npm run build"
   },
   "keywords": [
     "qualweb",
@@ -30,6 +32,11 @@
     "accessibility",
     "a11y"
   ],
+  "homepage": "https://github.com/qualweb/core#readme",
+  "bugs": {
+    "url": "https://github.com/qualweb/core/issues",
+    "email": "qualweb@fc.ul.pt"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/qualweb/core.git"
@@ -53,34 +60,37 @@
       "url": "https://arbsantos.github.io"
     }
   ],
+  "engines": {
+    "node": ">=12"
+  },
   "license": "ISC",
   "dependencies": {
     "@qualweb/crawler": "^0.1.1",
     "@qualweb/dom": "^0.1.35",
     "@qualweb/earl-reporter": "^0.3.0",
-    "@qualweb/evaluation": "^0.1.77",
+    "@qualweb/evaluation": "^0.1.78",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
-    "puppeteer": "^8.0.0"
+    "puppeteer": "^5.5.0"
   },
   "devDependencies": {
     "@qualweb/types": "^0.4.62",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^14.14.33",
-    "@types/puppeteer": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "chai": "^4.2.0",
-    "eslint": "^7.20.0",
+    "@types/node": "^14.14.35",
+    "@types/puppeteer": "^5.4.3",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
-    "mocha": "^8.2.1",
+    "mocha": "^8.3.2",
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.20.30",
-    "typescript": "^4.1.3"
+    "typedoc": "^0.20.33",
+    "typescript": "^4.2.3"
   }
 }
