--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -3,15 +3,19 @@
   "version": "0.4.57",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/act.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm test/rule.spec.js",
+    "test:r72": "mocha --require esm test/QW_ACT_R72.spec.js",
     "test:url": "mocha --require esm test/url.spec.js",
     "test:pre": "mocha --require esm test/rulePreProcessing.spec.js",
     "compile:rules": "node compile-rules.js",
     "prebuild": "npm run compile:rules && rimraf prebuild && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
-    "pub": "npm run build && npm publish"
+    "prepare": "npm run build"
   },
   "keywords": [
     "a11y",
@@ -31,13 +35,13 @@
     "@qualweb/dom": "^0.1.35",
     "@qualweb/qw-element": "^0.1.33",
     "@qualweb/qw-page": "^0.1.38",
-    "@qualweb/types": "^0.4.62",
+    "@qualweb/types": "^0.4.67",
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.14.33",
+    "@types/node": "^14.14.35",
     "@types/string-pixel-width": "^1.7.1",
-    "chai": "^4.3.3",
+    "chai": "^4.3.4",
     "css-select": "^3.1.2",
     "esm": "^3.2.25",
     "mocha": "^8.3.1",
@@ -45,7 +49,7 @@
     "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3",
-    "webpack": "^5.24.4",
+    "webpack": "^5.27.2",
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
