--- a/packages/qw-element/package.json
+++ b/packages/qw-element/package.json
@@ -1,19 +1,28 @@
 {
   "name": "@qualweb/qw-element",
-  "version": "0.1.32",
+  "version": "0.2.0",
   "description": "QualWeb element interface and utilities",
   "main": "dist/index.js",
-  "types": "./dist",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm",
-    "clean": "node clean.js",
-    "build": "npm run clean && tsc --build",
-    "pub": "npm run build && npm publish --access=public"
+    "prebuild": "rimraf dist",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "build": "npm run format && npm run prebuild && tsc --build",
+    "prepare": "npm run build"
   },
+  "homepage": "https://github.com/qualweb/qw-element#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qualweb/util.git"
+    "url": "git+https://github.com/qualweb/qw-element.git"
+  },
+  "bugs": {
+    "url": "https://github.com/qualweb/qw-element/issues"
   },
   "keywords": [
     "qualweb",
@@ -23,17 +32,22 @@
   ],
   "author": "João Vicente",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/qualweb/util/issues"
-  },
-  "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.52",
+    "@qualweb/types": "^0.5.2",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^14.14.20",
-    "chai": "^4.2.0",
+    "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
-    "mocha": "^8.2.1",
-    "typescript": "^4.1.3"
+    "mocha": "^8.3.2",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "typedoc": "^0.20.34",
+    "typescript": "^4.2.3"
   }
 }
