--- a/packages/qw-element/package.json
+++ b/packages/qw-element/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-element",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "QualWeb element interface and utilities",
   "main": "dist/index.js",
   "files": [
@@ -14,6 +14,7 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "build": "npm run format && npm run prebuild && tsc --build",
+    "docs": "typedoc --out docs src/index.ts",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/qw-element#readme",
