--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@qualweb/qw-page",
-  "version": "0.1.38",
+  "version": "0.2.0",
   "description": "Utilities module for qualweb",
   "main": "dist/qwPage.js",
-  "types": "./node_modules/@qualweb/types",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm",
@@ -11,47 +13,48 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "build": "npm run prebuild && tsc --build && webpack --mode production",
-    "pub": "npm run build && npm publish --access=public"
+    "build": "npm run format && npm run prebuild && tsc --build && webpack --mode production",
+    "docs": "typedoc --out docs src/index.ts",
+    "prepare": "npm run build"
   },
+  "homepage": "https://github.com/qualweb/qw-page#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qualweb/util.git"
+    "url": "git+https://github.com/qualweb/qw-page.git"
+  },
+  "bugs": {
+    "url": "https://github.com/qualweb/qw-page/issues"
   },
   "keywords": [
     "qualweb",
     "accessibility",
-    "util",
-    "lib"
+    "qualweb-page"
   ],
   "author": "João Vicente",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/qualweb/util/issues"
-  },
-  "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/dom": "^0.1.28",
-    "@qualweb/types": "^0.4.41",
+    "@qualweb/dom": "^0.2.0",
+    "@qualweb/types": "^0.5.3",
     "@tsconfig/recommended": "^1.0.1",
     "@types/puppeteer": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
-    "mocha": "^8.0.1",
+    "mocha": "^8.3.2",
     "prettier": "^2.1.2",
-    "puppeteer": "^5.5.0",
+    "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.3",
-    "webpack": "^5.12.3",
+    "typedoc": "^0.20.34",
+    "typescript": "^4.2.3",
+    "webpack": "^5.28.0",
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.29"
+    "@qualweb/qw-element": "^0.2.1"
   }
 }
