--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@qualweb/act-rules",
   "version": "0.4.57",
-  "description": "ACT-R module for qualweb accessibility evaluator",
-  "main": "dist/act.js",
+  "description": "ACT rules module for qualweb web accessibility evaluator",
+  "main": "dist/act.bundle.js",
   "files": [
     "dist/*"
   ],
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm test/rule.spec.js",
-    "test:r72": "mocha --require esm test/QW_ACT_R72.spec.js",
     "test:url": "mocha --require esm test/url.spec.js",
-    "test:pre": "mocha --require esm test/rulePreProcessing.spec.js",
     "compile:rules": "node compile-rules.js",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prebuild": "npm run compile:rules && rimraf prebuild && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "prepare": "npm run build"
@@ -20,6 +21,7 @@
   "keywords": [
     "a11y",
     "act",
+    "act-rules",
     "accessibility",
     "qualweb",
     "evaluator",
@@ -32,29 +34,34 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "^0.1.35",
-    "@qualweb/qw-page": "^0.1.38",
-    "@qualweb/types": "^0.4.67",
+    "@qualweb/dom": "^0.2.0",
+    "@qualweb/qw-page": "^0.2.1",
+    "@qualweb/types": "^0.5.3",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^14.14.35",
     "@types/string-pixel-width": "^1.7.1",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.3.4",
     "css-select": "^3.1.2",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
     "mocha": "^8.3.1",
     "node-fetch": "^2.6.1",
+    "prettier": "^2.2.1",
     "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3",
-    "webpack": "^5.27.2",
+    "webpack": "^5.28.0",
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
     "@qualweb/util": "^0.3.66",
     "languagedetect": "^2.0.0",
-    "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "rematrix": "^0.7.1",
     "string-pixel-width": "^1.10.0"
