--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.4.18",
+  "version": "0.5.0",
   "description": "QualWeb best practices",
-  "main": "dist/bp.js",
-  "types": "./dist",
+  "main": "dist/bp.bundle.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "tsc": "tsc",
     "test:bp1": "mocha --require esm test/best-practices/QW-BP1.spec.js",
@@ -21,17 +23,21 @@
     "test:bp15": "mocha --require esm test/best-practices/QW-BP15.spec.js",
     "test:bp17": "mocha --require esm test/best-practices/QW-BP17.spec.js",
     "test:bp18": "mocha --require esm test/best-practices/QW-BP18.spec.js",
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf prebuild && tsc --build",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "compile:bps": "node compile-bps.js",
-    "build": "npm run compile:bps && npm run prebuild && tsc --build && webpack --mode production",
-    "pub": "npm run build && npm publish --access=public"
+    "build": "npm run compile:bps && npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
+    "prepare": "npm run build"
   },
+  "homepage": "https://github.com/qualweb/best-practices#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qualweb/best-practices.git"
+  },
+  "bugs": {
+    "url": "https://github.com/qualweb/best-practices/issues"
   },
   "keywords": [
     "qualweb",
@@ -42,39 +48,32 @@
   ],
   "author": "João Vicente",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/qualweb/best-practices/issues"
-  },
-  "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/dom": "^0.1.34",
-    "@qualweb/types": "^0.4.61",
+    "@qualweb/dom": "^0.2.0",
+    "@qualweb/types": "^0.5.3",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.intersection": "^4.4.6",
-    "@types/node": "^14.14.33",
-    "@types/puppeteer": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "chai": "^4.3.3",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^7.1.0",
+    "@types/node": "^14.14.36",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
-    "mocha": "^8.3.1",
+    "mocha": "^8.3.2",
     "prettier": "^2.2.1",
     "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3",
-    "webpack": "^5.24.4",
+    "webpack": "^5.28.0",
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "@qualweb/qw-page": "^0.1.38",
-    "@qualweb/util": "^0.3.66",
-    "lodash.clone": "^4.5.0",
+    "@qualweb/qw-page": "^0.2.2",
+    "@qualweb/util": "^0.4.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.intersection": "^4.4.0"
   }
