--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "QualWeb best practices",
   "main": "dist/bp.bundle.js",
   "files": [
@@ -23,12 +23,12 @@
     "test:bp15": "mocha --require esm test/best-practices/QW-BP15.spec.js",
     "test:bp17": "mocha --require esm test/best-practices/QW-BP17.spec.js",
     "test:bp18": "mocha --require esm test/best-practices/QW-BP18.spec.js",
-    "prebuild": "rimraf prebuild && tsc --build",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "compile:bps": "node compile-bps.js",
-    "build": "npm run compile:bps && npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
+    "prebuild": "rimraf prebuild && npm run compile:bps && tsc --build",
+    "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
@@ -58,7 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.3.4",
-    "eslint": "^7.22.0",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sonarjs": "^0.6.0",
@@ -69,7 +69,7 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.6.0"
   },
   "dependencies": {
     "@qualweb/qw-page": "^0.2.2",
