--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "QualWeb best practices",
   "main": "dist/bp.bundle.js",
   "files": [
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
+    "test:url": "mocha --require esm test/url.spec.js",
     "test:bp1": "mocha --require esm test/best-practices/QW-BP1.spec.js",
     "test:bp2": "mocha --require esm test/best-practices/QW-BP2.spec.js",
     "test:bp4": "mocha --require esm test/best-practices/QW-BP4.spec.js",
@@ -50,11 +51,11 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "^0.2.0",
-    "@qualweb/types": "^0.5.3",
+    "@qualweb/qw-page": "^0.2.3",
+    "@qualweb/types": "^0.5.7",
+    "@qualweb/util": "^0.5.3",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/lodash.intersection": "^4.4.6",
-    "@types/node": "^14.14.36",
+    "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.3.4",
@@ -70,11 +71,5 @@
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0"
-  },
-  "dependencies": {
-    "@qualweb/qw-page": "^0.2.2",
-    "@qualweb/util": "^0.4.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.intersection": "^4.4.0"
   }
 }
