--- a/packages/act-rules/tsconfig.json
+++ b/packages/act-rules/tsconfig.json
@@ -25,12 +25,7 @@
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "typeRoots": ["@qualweb/types"] /* List of folders to include type definitions from. */,
-    "types": [
-      "@qualweb/types",
-      "node",
-      "lodash.clonedeep",
-      "string-pixel-width"
-    ] /* Type declaration files to be included in compilation. */,
+    "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
 
     /* Experimental Options */
