--- a/packages/evaluation/tsconfig.json
+++ b/packages/evaluation/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     /* Basic Options */
+    "target": "ES2019",
+    "lib": ["ES2019", "DOM"],
     "resolveJsonModule": true,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
@@ -30,11 +32,7 @@
     "typeRoots": [
       "@qualweb/types"
     ] /* List of folders to include type definitions from. */,
-    "types": [
-      "@qualweb/types",
-      "node",
-      "lodash.clonedeep"
-    ] /* Type declaration files to be included in compilation. */,
+    "types": ["@qualweb/types", "node", "puppeteer"] /* Type declaration files to be included in compilation. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   }
 }
