--- a/packages/dom/tsconfig.json
+++ b/packages/dom/tsconfig.json
@@ -13,12 +13,12 @@
     "removeComments": true /* Do not emit comments to output. */,
 
     /* Strict Type-Checking Options */
-    "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
+    "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
     "strictNullChecks": true /* Enable strict null checks. */,
     "strictFunctionTypes": true /* Enable strict checking of function types. */,
     "strictBindCallApply": true /* Enable strict 'bind', 'call', and 'apply' methods on functions. */,
     "strictPropertyInitialization": true /* Enable strict checking of property initialization in classes. */,
-    "noImplicitThis": false /* Raise error on 'this' expressions with an implied 'any' type. */,
+    "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
 
     /* Additional Checks */
@@ -30,6 +30,6 @@
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "typeRoots": ["@qualweb/types"] /* List of folders to include type definitions from. */,
-    "types": ["@qualweb/types", "node", "lodash.clone"] /* Type declaration files to be included in compilation. */
+    "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */
   }
 }
