--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.6.7",
+  "version": "0.6.8",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -65,10 +65,10 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@qualweb/crawler": "^0.3.5",
-    "@qualweb/dom": "^0.2.1",
-    "@qualweb/earl-reporter": "^0.4.1",
-    "@qualweb/evaluation": "^0.2.10",
+    "@qualweb/crawler": "0.3.5",
+    "@qualweb/dom": "0.2.1",
+    "@qualweb/earl-reporter": "0.4.1",
+    "@qualweb/evaluation": "0.2.12",
     "colors": "^1.4.0",
     "puppeteer": "^9.1.1",
     "puppeteer-cluster": "^0.22.0",
@@ -77,11 +77,11 @@
     "puppeteer-extra-plugin-stealth": "^2.7.8"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.6.4",
+    "@qualweb/types": "^0.6.5",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "chai": "^4.3.4",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
